--- a/Nano Challenge 2/Info.plist
+++ b/Nano Challenge 2/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Always Being Monitored</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need Your Location For Geofencing Area</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
