--- a/Nano Challenge 2/Data/Nano Challenge 2.entitlements
+++ b/Nano Challenge 2/Data/Nano Challenge 2.entitlements
@@ -12,7 +12,13 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
+	<key>com.apple.developer.siri</key>
+	<true/>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.kalebwijaya.Nano-Challenge-2</string>
+	</array>
 </dict>
 </plist>
