--- a/Nano Challenge 2/Info.plist
+++ b/Nano Challenge 2/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>For Auth</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Always Being Monitored</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
